--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -15,6 +15,34 @@ body {
 	margin: 0 auto;
 	background: #fff;
 	padding: 0 45px 20px;
+  display: block;
+
 }
+
+.header{
+	font-size: 4em;
+	font-family: 'Baskerville', serif;
+
+}
+
+#necklace {
+  width: 20%;
+
+}
+
+.logo {
+  display: inline-block;
+}
+
+
+.footer {
+  float: right;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
 
 /* Write all remaining styles here */
