automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,8 @@ body {
 /*////////// Links //////////*/
 
 a: hover {
-	color: 
-	background-color: grey
+	color: 112	125	121
+	background-color: 202	204	203	
 
 }
 
