--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,21 @@ body {
   box-sizing: border-box;
 }
 
+/*////////// Image Styles //////////*/
+
+img {
+    border-style: solid;
+    border-width: 5px;
+		border-color: rgb(202, 204, 203);
+}
+
+
+
+
 /*////////// Links //////////*/
 
 a: hover {
-	color: 112	125	121
+	color: 112 125	121
 	background-color: 202	204	203	
 
 }
