--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ img {
     border-style: solid;
     border-width: 5px;
 		border-color: rgb(202, 204, 203);
-		width: 100%
+		width: auto
 }
 
 img:hover {
