--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ img {
     border-style: solid;
     border-width: 5px;
 		border-color: rgb(202, 204, 203);
-		max-width:100%;
+		max-width:0 auto
 		max-height:100%;
 }
 
