--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ img {
     border-style: solid;
     border-width: 5px;
 		border-color: rgb(202, 204, 203);
-		max-width: 0 auto;
-		max-height: 0 auto;
+		max-width: 100%;
+		max-height: 100%;
 	
 }
 
