--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 	font-size: 4em;
 	font-family: 'Baskerville', serif;
 	color: rgb(154,	170,	164);
+	opacity: 60%;
 	font-weight: normal;
 
 }
