--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ img {
 		border-color: rgb(202, 204, 203);
 		max-width: 100%;
 		max-height: 100%;
-		display: inline-flex;block;
+		display: inline-flex;
 
 }
 
