--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ img {
 		border-color: rgb(202, 204, 203);
 		max-width: 100%;
 		max-height: 100%;
+		width: auto;
 		display: inline-block;
 		margin: auto;
 
