--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ body {
 	width: 960px;
 	margin: 0 auto;
 	background: #fff;
+	max-width: 100%;
+	max-height: 100%;
 	padding: auto;
   display: block;
 
