--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,10 @@ body {
 	width: 960px;
 	margin: 0 auto;
 	background: #fff;
-	padding: 50px;
+	padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
   display: block;
 
 }
