--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,8 @@ h2 {
 
 * {
   box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 
 /*////////// Image Styles //////////*/
