automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,11 @@ img:hover {
 	border-color: rgb(114,	127,	122);
 }
 
+/*////////// Paragraph Styles //////////*/
 
-
+p{
+	width: auto;
+}
 
 
 /*////////// Links //////////*/
