automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
   display: block;
 
 }
-
+/*
 .header {
 	font-size: 4em;
 	font-family: 'Baskerville', serif;
@@ -29,9 +29,8 @@ body {
 	opacity: 60%;
 	font-weight: normal;
 	margin: 14px;
-
 }
-
+*/
 h2 {
 	color: rgb(154,	155, 145);
 }
