automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h2 {
 .footer {
   float: right;
 	margin-top: 20px;
-	margin-left: 2px;
+	margin-right: 2px;
 	width: auto;
 	display:inline-block;
 }
